# jupyter-project-template

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  gltr-secrets.yaml  gltr.yaml  pyproject.toml  sean-testing-file.md
app/: clean-notebooks.sh  voila-app.py
app/voila-notebooks/: App.ipynb
jupyterlab/: .gitignore
jupyterlab/config/@jupyterlab/codemirror-extension/: commands.jupyterlab-settings
jupyterlab/config/@jupyterlab/console-extension/: tracker.jupyterlab-settings
mypymodule/: setup.py
mypymodule/mypymodule/: utils.py
notebooks/: Example.ipynb  test-file.md
tests/: test_mypymodule.py
